--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>e-mail subscription</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>  
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
 
     <body>
-        <input type="text" name="email" placeholder="Enter your email">
-        <input type="submit" value="Subscribe">
+        <div>
+            <input type="text" name="email" placeholder="Enter your email">
+            <input type="submit" value="Subscribe">
+
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        </div>
+        <div>
+            <p class="response"></p>
+        </div>
 
         <!-- Script to call the lamba function -->
         <script>
@@ -19,15 +27,16 @@
                 var email = $('input[name="email"]').val();
                 console.log('email: ' + email);
                 $.ajax({
+                    type: 'get',
                     url: 'https://gvx9ody4wd.execute-api.us-east-1.amazonaws.com/Prod/subscribe',
-                    type: 'POST',
                     data: {
                         email: email
                     },
                     success: function(data){
-                        console.log(data);
+                        data.error ? color='red': color='green';
+                        $('.response').text(data.res).css('color', color);
                     }
-                });
+                })
             });
         </script>
 
