--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> 
 
     <body>
-        <div>
-            <input type="text" name="email" placeholder="Enter your email">
-            <input type="submit" value="Subscribe">
-
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
+        <div class="mt-5 text-center" >
+            <h1><strong>Subscribe to our newsletter</strong></h1>
         </div>
-        <div>
+        <div class="container d-flex align-items-center justify-content-center" style="height: 100px;">
+            <input type="text" name="email" placeholder="Enter your email" class="form-control">
+            <input type="submit" value="Subscribe" class="btn btn-primary">
+        </div>
+        <div class="text-center"> 
             <p class="response"></p>
         </div>
 
